配置 giscus 评论系统

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -133,4 +133,22 @@ const jsonLd = {
         </a>
     </div>
 
+    <!-- Giscus Comment -->
+    <script src="https://giscus.app/client.js"
+        data-repo="wyf9/fuwari"
+        data-repo-id="R_kgDOPbeQxg"
+        data-category="Giscus"
+        data-category-id="DIC_kwDOPbeQxs4CuAkG"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+    </script>
+
 </MainGridLayout>
